@@ -5,6 +5,7 @@
       * test = "hadri": * fixed p-value (now based on one-sided test).
                         * fixed statistic in non-heteroskedasticity case (Hcons = FALSE).
                         * for non-het. consistent case, one can now use dfcor = TRUE.
+      * test = "ips": p-value fixed (now one-sided to the left).
       
   * pbltest: now accepts pdata.frames with index not in first two columns.
   * cortab: new function to compute cross-sectional correlation matrix.
